[gd_scene load_steps=2 format=3 uid="uid://c56l3hljvxv2k"]

[ext_resource type="Script" path="res://scripts/UI scripts/wave_button.gd" id="1_t86ep"]

[node name="WaveButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 48.0
script = ExtResource("1_t86ep")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 47.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 11

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Start Game"

[node name="NextWaveButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Next Wave"

[connection signal="pressed" from="MarginContainer/HBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/NextWaveButton" to="." method="_on_next_wave_button_pressed"]
